--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "PHP8 Telegram bot engine",
     "type": "library",
     "require": {
-        "guzzlehttp/guzzle": "7.0"
+        "guzzlehttp/guzzle": "7.0",
+        "wertog/foxy-mvc": "dev-main"
     },
     "license": "GPL-3.0-or-later",
     "autoload": {
@@ -11,5 +12,5 @@
             "WeRtOG\\BottoGram\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
