--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "guzzlehttp/guzzle": "7.0",
-        "wertog/foxy-mvc": "dev-main"
+        "wertog/foxy-mvc": "dev-main",
+        "matthiasmullie/minify": "dev-master"
     },
     "license": "GPL-3.0-or-later",
     "autoload": {
